--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,5 +2,5 @@
 <resources>
     <string name="enter_clone_url">Enter the url of the git repository to clone:</string>
     <string name="clone_menu_option">Clone...</string>
-    <string name="app_name">agit</string>
+    <string name="app_name">Agit</string>
 </resources>
