Styling for the Clone Launcher, inc bottom 'ExecutionBar'
- The 'ExecutionBar' lets the 'Clone' button float above your keyboard,
so it's always ready

- Add padding in the central scrollview to make everything a bit nicer.

- Add text hint for the two textfields

--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -2,8 +2,12 @@
 <resources>
     <string name="app_name">Agit</string>
     <string name="suggest_repos_button">Suggest repos...</string>
-    <string name="enter_clone_url">Enter the url of the git repository to clone:</string>
     <string name="clone_menu_option">Clone...</string>
+    <string name="enter_clone_url">Url</string>
+    <string name="clone_url_hint">Git repository url</string>
+    <string name="clone_directory_hint">Folder for checkout</string>
+
+    <string name="execute_clone_button_label">Clone!</string>
     <string name="delete_repo_menu_option">Delete Repo</string>
     <string name="delete_tag_menu_option">Delete Tag</string>
     
