--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="enter_clone_url">Url</string>
     <string name="clone_url_hint">Git repository url</string>
     <string name="clone_directory_hint">Folder for checkout</string>
+    <string name="clone_readiness_needs_user_to_enter_a_url">Enter a url to clone from- or use a suggestion?</string>
+    <string name="clone_readiness_requires_fresh_checkout_folder">Folder already exists- specify an alternative location?</string>
 
     <string name="execute_clone_button_label">Clone!</string>
     <string name="delete_repo_menu_option">Delete Repo</string>
