--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="suggest_repos_button">Suggest repos...</string>
     <string name="clone_menu_option">Clone...</string>
     <string name="enter_clone_url">Url</string>
-    <string name="clone_target_folder_label">Target Directory</string>
+    <string name="clone_target_folder_label">Target Folder</string>
     <string name="clone_url_hint">Repository url</string>
     <string name="clone_directory_hint">Folder for checkout</string>
-    <string name="clone_readiness_needs_user_to_enter_a_url">Enter a url to clone from - or choose from some #suggest_repo[example repos].</string>
-    <string name="clone_readiness_requires_fresh_checkout_folder">Folder already exists- #specify_target_dir[specify an alternative] location?</string>
+    <string name="clone_readiness_needs_user_to_enter_a_url">Enter a repository url - or choose from some #suggest_repo[example repos].</string>
+    <string name="clone_readiness_folder_already_exists">Folder already exists- #specify_target_dir[specify an alternative] location?</string>
+    <string name="clone_readiness_repository_folder_already_exists">Folder already exists locally- view #view_existing_repo[existing repo]?</string>
 
     <string name="use_default_target_directory_checkbox_label">Use default location</string>
     <string name="bare_repo_checkbox_label">Bare</string>
