--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="tag_commit_menu_option">Tag...</string>
 
     <string name="clone_launcher_farewell_due_to_clone_launched">Clone started..!</string>
+    <string name="object_id_copied">Object id<br /><small><b><tt>%s</tt></b></small><br />copied to clipboard!</string>
 </resources>
