--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="clone_readiness_repository_folder_already_exists">Folder already exists locally- view #view_existing_repo[existing repo]?</string>
     <string name="ssh_agent_not_correctly_installed">No SSH-agent available - view #view_ssh_instructions[SSH setup guide]?</string>
 
+    <string name="repo_list_title">Local Repositories</string>
 
     <string name="use_default_target_directory_checkbox_label">Use default location</string>
     <string name="bare_repo_checkbox_label">Bare</string>
