--- a/agit/res/values-de/strings.xml
+++ b/agit/res/values-de/strings.xml
@@ -6,16 +6,16 @@
     <string name="about_app_menu_option">Über</string>
     <string name="about_activity_title">Über...</string>
     <string name="using_ssh_activity_title">SSH Installationshilfe</string>
-    <string name="clone_launcher_activity_title">Klonen...</string>
-    <string name="clone_menu_option">Klonen...</string>
+    <string name="clone_launcher_activity_title">Clone...</string>
+    <string name="clone_menu_option">Clone...</string>
     <string name="enter_clone_url">URL</string>
     <string name="clone_target_folder_label">Zielordner</string>
     <string name="clone_url_hint">Repository URL</string>
     <string name="clone_directory_hint">Ordner für den Checkout</string>
-    <string name="clone_readiness_needs_user_to_enter_a_url">Bitte Repository URL eingeben- oder hier auswählen #suggest_repo[example repos].</string>
-    <string name="clone_readiness_folder_already_exists">Ordner bereits vorhanden- #specify_target_dir[specify an alternative] location?</string>
-    <string name="clone_readiness_repository_folder_already_exists">Ordner existiert bereits lokal- view #view_existing_repo[existing repo]?</string>
-    <string name="ssh_agent_not_correctly_installed">Kein SSH-Agent verfügbar- view #view_ssh_instructions[SSH setup guide]?</string>
+    <string name="clone_readiness_needs_user_to_enter_a_url">Bitte Repository URL eingeben - oder hier auswählen #suggest_repo[Beispiele].</string>
+    <string name="clone_readiness_folder_already_exists">Ordner bereits vorhanden- #specify_target_dir[alternativer] Speicherplatz?</string>
+    <string name="clone_readiness_repository_folder_already_exists">Ordner existiert bereits lokal- Ansicht #view_existing_repo[existierendes Repository]?</string>
+    <string name="ssh_agent_not_correctly_installed">Kein SSH-Agent verfügbar- view #view_ssh_instructions[SSH Installationshilfe]?</string>
 
     <string name="repo_list_title">Lokale Repositories</string>
 
@@ -23,7 +23,7 @@
     <string name="bare_repo_checkbox_label">Bare</string>
 
 
-    <string name="execute_clone_button_label">Klonen!</string>
+    <string name="execute_clone_button_label">Clone!</string>
     <string name="delete_repo_menu_option">Lösche Repository</string>
     <string name="delete_tag_menu_option">Lösche Tag</string>
 
@@ -35,10 +35,10 @@
     <string name="checkout_commit_menu_option">Checkout...</string>
     <string name="tag_commit_menu_option">Tag...</string>
 
-    <string name="clone_launcher_farewell_due_to_clone_launched">Klonen gestartet!</string>
-    <string name="object_id_copied">Objekt ID<br /><small><b><tt>%s</tt></b></small><br />In die Zwischenablage kopiert!</string>
+    <string name="clone_launcher_farewell_due_to_clone_launched">Clone gestartet!</string>
+    <string name="object_id_copied">Object id<br /><small><b><tt>%s</tt></b></small><br />In die Zwischenablage kopiert!</string>
 
-    <string name="ask_host_key_ok_ticker" >"Host %1$s SSH Fingerabdruck..."</string>
+    <string name="ask_host_key_ok_ticker" >"SSH Fingerabdruck von Host %1$s..."</string>
     <string name="ask_host_key_ok" >"Fingerabdruck des Schlüssels von %1$s: %2$s OK?"</string>
 
     <string name="diff_seekbar_before">VORHER</string>
