Do easy translation for Yes and No buttons...

--- a/agit/res/values-de/strings.xml
+++ b/agit/res/values-de/strings.xml
@@ -43,4 +43,7 @@
 
     <string name="diff_seekbar_before">VORHER</string>
     <string name="diff_seekbar_after">NACHHER</string>
+
+    <string name="button_yes">"Ja"</string>
+    <string name="button_no">"Nein"</string>
 </resources>
