--- a/agit/res/values-it/strings.xml
+++ b/agit/res/values-it/strings.xml
@@ -12,18 +12,10 @@
 	<string name="clone_target_folder_label">Cartella di destinazione</string>
 	<string name="clone_url_hint">Url del repository</string>
 	<string name="clone_directory_hint">Cartella di destinazione</string>
-	<string name="clone_readiness_needs_user_to_enter_a_url">Inserisci l\'url di un repository - o scegli tra uno
-		dei #suggest_repo[repository consigliati].
-	</string>
-	<string name="clone_readiness_folder_already_exists">La cartella esiste già -
-		#specify_target_dir[specificare una posizione alternativa]?
-	</string>
-	<string name="clone_readiness_repository_folder_already_exists">La cartella esiste già in locale - visualizzare
-		#view_existing_repo[il repository esistente]?
-	</string>
-	<string name="ssh_agent_not_correctly_installed">Nessun agente SSH disponibile - visualizzare
-		#view_ssh_instructions[la guida per l\'installazione di SSH]?
-	</string>
+	<string name="clone_readiness_needs_user_to_enter_a_url">Inserisci l\'url di un repository - o scegli tra uno dei #suggest_repo[repository consigliati].</string>
+	<string name="clone_readiness_folder_already_exists">La cartella esiste già - #specify_target_dir[specificare una posizione alternativa]?</string>
+	<string name="clone_readiness_repository_folder_already_exists">La cartella esiste già in locale - visualizzare #view_existing_repo[il repository esistente]?</string>
+	<string name="ssh_agent_not_correctly_installed">Nessun agente SSH disponibile - visualizzare #view_ssh_instructions[la guida per l\'installazione di SSH]?</string>
 
 	<string name="repo_list_title">Repository locali</string>
 
@@ -43,23 +35,10 @@
 	<string name="tag_commit_menu_option">Tag...</string>
 
 	<string name="clone_launcher_farewell_due_to_clone_launched">Clone iniziato..!</string>
-	<string name="object_id_copied">
-		Id dell\'oggetto
-		<br />
-		<small>
-			<b>
-				<tt>%s</tt>
-			</b>
-		</small>
-		<br />
-		copiato negli appunti!
-	</string>
+	<string name="object_id_copied">copiato negli appunti!</string>
 
-	<string name="ask_host_key_ok_ticker">"Impronta SSH dell\'host %1$s..."
-	</string>
-	<string name="ask_host_key_ok">"%1$s ha la chiave con impronta: %2$s
-		OK?"
-	</string>
+	<string name="ask_host_key_ok_ticker">"Impronta SSH dell\'host %1$s..."</string>
+	<string name="ask_host_key_ok">"%1$s ha la chiave con impronta: %2$s OK?"</string>
 
 	<string name="diff_seekbar_before">PRIMA</string>
 	<string name="diff_seekbar_after">DOPO</string>
@@ -70,7 +49,5 @@
 	<string name="button_no">"No"</string>
 
 	<string name="repo_deletion_dialog_confirmation_title">"Elimina repository..."</string>
-	<string name="repo_deletion_dialog_confirmation_message">"Sei sicuro di voler eliminare questo repository
-		Git?"
-	</string>
+	<string name="repo_deletion_dialog_confirmation_message">"Sei sicuro di voler eliminare questo repository Git?"</string>
 </resources>
