--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -74,6 +74,11 @@
     <string name="pulling_from_remote_on_repo">"Pulling from %1$s on %2$s"</string>
     <string name="pulled_from_remote">"Pulled from %1$s"</string>
     <string name="merge_status">"Merge status : %1$s"</string>
+    <string name="pull_cancelled">"Pull cancelled"</string>
+    <string name="ref_not_resolved">"Ref {0} can not be resolved"</string>
 
+    <string name="missing_configuration_for_key">"No value for section '%1$s', subsection '%2$s', name '%3$s' found in configuration"</string>
+    <string name="can_not_pull_on_a_repo_with_state">"Cannot pull into a repository with state: %1$s"</string>
+    <string name="can_not_pull_on_a_repo_with_detached_head">"Cannot pull into a repository with a detached HEAD - first checkout a branch"</string>
 
 </resources>
