Add welcome text to dashboard activity
Would be nice to have to the welcome message disappear as soon as the user
starts their first clone...

--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="suggest_repos_button">Suggest repos...</string>
     <string name="about_app_menu_option">About</string>
     <string name="about_activity_title">About...</string>
+    <string name="welcome_message">"Welcome to Agit.\nGet started by #clone[cloning] a repository."</string>
     <string name="using_ssh_activity_title">SSH Install Guide</string>
     <string name="clone_launcher_activity_title">Clone...</string>
     <string name="clone_menu_option">Clone...</string>
