Warn user if there's not enough room when planning a clone
Thanks to José who worked out that his sdcard being full was the reason
Agit was gnomically failing...

The 128 KB space requirement comes from an quick look at the amount of
space a blank repo takes on an Ubuntu laptop - it probably takes a little
less on an Android device.

$ du -h
40K	./.git/hooks
8.0K	./.git/info
4.0K	./.git/objects/pack
4.0K	./.git/objects/info
12K	./.git/objects
4.0K	./.git/refs/heads
4.0K	./.git/refs/tags
12K	./.git/refs
4.0K	./.git/branches
92K	./.git
96K	.

--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="clone_readiness_repository_folder_already_exists">Folder already exists locally- view
         #view_existing_repo[existing repo]?
     </string>
+    <string name="clone_readiness_not_enough_room_on_partition">"Not enough room, only %1$s of space available to Agit on this partition."</string>
     <string name="ssh_agent_not_correctly_installed">No SSH-agent available - view #view_ssh_instructions[SSH setup
         guide]?
     </string>
