--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -35,6 +35,8 @@
 
     <string name="execute_clone_button_label">Clone!</string>
     <string name="open_menu_option">Open...</string>
+    <string name="find_files_menu_option">Find files...</string>
+    <string name="filter_files_on_ref_hint">"Filter files on %1$s"</string>
     <string name="delete_menu_option">Delete</string>
     <string name="delete_repo_menu_option">Delete Repo</string>
     <string name="delete_tag_menu_option">Delete Tag</string>
