Add blob-viewer activity
Use the google-code-prettify library to present text-based blob content,
or launch the android picker if it's binary (passing thru detected
mime-type)

Amend blob frag to launch viewer...

--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -110,4 +110,6 @@
         checkout a branch"
     </string>
 
+    <string name="no_viewer_available_for_file">"No viewer available for '%1$s'"</string>
+
 </resources>
