--- a/agit/res/values/strings.xml
+++ b/agit/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="using_ssh_activity_title">SSH Install Guide</string>
     <string name="clone_launcher_activity_title">Clone...</string>
     <string name="clone_menu_option">Clone...</string>
+    <string name="settings_app_menu_option">Settings...</string>
     <string name="enter_clone_url">Url</string>
     <string name="clone_target_folder_label">Target Folder</string>
     <string name="clone_url_hint">Repository url</string>
@@ -112,4 +113,9 @@
 
     <string name="no_viewer_available_for_file">"No viewer available for '%1$s'"</string>
 
+    <!-- Settings Strings -->
+    <string name="settings">Settings</string>
+    <string name="settings_category_sync">Sync Settings</string>
+    <string name="setting_title_sync_frequency">Sync Frequency (Minutes)</string>
+    <string name="setting_instruction_sync_frequency">Tap to set how often repository synchronization will occur</string>
 </resources>
